# typewiz

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  STANDARDS_ENHANCEMENT_SUMMARY.md  TERMS.md  TEST_REFORM.md  TEST_REORGANIZATION_ANALYSIS.md  mypy.ini  noxfile.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: CONTRIBUTING.md  EXCEPTIONS.md  pytc.md  pytc_export.md  ratchetr.md  release_docs_plan.md  typewiz.md  typewiz_export.md  typing_inspector.md  typing_inspector_export.md
docs/ADR/: ADR0001-Include_Exclude.md  ADR0002-Plugin_Engines.md
docs/ADR/ADR0001-Include_Exclude/: path_scoping_contract.md  reference_implementation_outline.md  test_matrix.md
docs/ADR/ADR0002-Plugin_Engines/: execution outline.md  test matrix.md
docs/_internal/: ADR Rewrite Plan v19.md  cli help v0.md  s11r2-policy.md  s11r2.md
docs/_internal/ADR/: ADR-0002 Plugin Engines.md  ADR-0003 Policy Boundaries.md  ADR-0004 Taxonomy.md  ADR-0005 Naming Conventions-draft.md  ADR-0005 Naming Conventions.md
docs/_internal/adr/: 0001-scoping-foundation.md  0002-engine-planning-foundation.md  0003-execution-contract-foundation.md  0004-taxonomy-foundation.md  0005-naming-foundation.md  0006-paths-foundation.md  0007-artifacts-foundation.md  0008-link-traversal-foundation.md  0009-config-discovery-foundation.md  ADR-0001 Include and Exclude-draft-2.md  ADR-0005 Naming Conventions-draft-2.md  COHERENCE_CHECKLIST.md  INDEX.md  coherence_checklist.md
docs/_internal/cli/: argv_normalization.md
docs/_internal/contracts/: CLI Contract v0.md  CLI Flag Matrix v0.md
docs/_internal/draft_logs/: ADR-0003.md  ADR-0006.md  CLI-argv-normalization.md  CLI-topics-ratchet.md  GOV-adr-archive-readme.md  GOV-adr-coherence-checklist.md  GOV-adr-index.md  GOV-s11r2-agents.md  GOV-s11r2-policy.md  (+11 more)
docs/archive/: README.md  STANDARDS_ENHANCEMENT_SUMMARY.md  TEST_REFORM.md  TEST_REORGANIZATION_ANALYSIS.md  ratchetr_export.md  typewiz_export.md
docs/cli/: contract.md  flag_matrix.md  manifest.md  parity_deltas.md  plugins.md  query.md
docs/reference/: artifacts.md  cache.md  config_loading.md  defaults.md  engine_errors.md  engine_planning.md  env_vars.md  error_codes.md  findings.md  follow_link.md  identifiers.md  logs.md  naming_conventions.md  path_resolution.md  run_artifacts.md  run_summary.md  selector_semantics.md  taxonomy.md
examples/: README.md  __init__.py  ratchetr.sample.toml  typewiz.sample.toml  typing_audit_manifest.json
examples/mypy-project/: README.md  __init__.py  mypy.ini  pyrightconfig.json  ratchetr.toml
examples/plugins/: __init__.py  simple_engine.py
examples/pyright-project/: README.md  __init__.py  ratchetr.toml
schemas/: manifest.schema.json  ratchet.schema.json  typing_audit_manifest.schema.json
scripts/: __init__.py  check_error_codes.py  check_ignore_justifications.py  check_ignores.py  check_license_headers.py  clean_build_artifacts.py  codex-vscode.sh  install_test_wheel.py  make_find.py  make_help.py  refactor_imports.py
scripts/docs/: README.md  __init__.py  _generated_blocks.py  check_link_hygiene.py  generate_adr_index.py  s11r2-progress-0.0.1.py  s11r2-progress.py
src/pytc/: __init__.py  api.py  cli.py  config.py  dashboard.py  html_report.py  manifest.py  runner.py  typed_manifest.py  utils.py
src/ratchetr/: __init__.py  __main__.py  api.py  cache.py  collections.py  error_codes.py  exceptions.py  json.py  license.py  logging.py  paths.py  precedence.py  resolution.py  runtime.py
src/typewiz/: __init__.py  __main__.py  aggregate.py  api.py  audit_config_utils.py  audit_execution.py  audit_paths.py  cache.py  category_utils.py  cli.py  cli_helpers.py  collection_utils.py  collections.py  config.py  dashboard.py  data_validation.py  error_codes.py  exceptions.py  formatting.py  html_report.py  json.py  json_types.py  license.py  logging.py  logging_utils.py  manifest.py  manifest_loader.py  manifest_models.py  manifest_versioning.py  model_types.py  override_utils.py  readiness.py  readiness_views.py  runner.py  runtime.py  summary_types.py  type_aliases.py  typed_manifest.py  types.py  utils.py
src/typing_inspector/: __init__.py  aggregate.py  api.py  cli.py  config.py  dashboard.py  html_report.py  manifest.py  runner.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_aggregate.py  test_api.py  test_api_helpers.py  test_audit_config_utils.py  test_audit_options.py  test_cache_hashing.py  test_cache_invalidation.py  test_cli.py  test_cli_commands_cache.py  test_cli_commands_manifest.py  test_cli_commands_ratchet.py  test_cli_help_command.py  test_cli_helpers.py  test_cli_ratchet_helpers.py  test_common_override_utils.py  test_config.py  test_dashboard.py  test_data_validation.py  test_engines_base.py  test_engines_builtin.py  test_engines_execution.py  test_engines_registry.py  test_error_codes.py  test_import_guardrails.py  test_internal_cache.py  test_internal_package.py  test_license.py  test_logging_utils.py  test_main_entrypoint.py  test_manifest_schema.py  test_model_type_enums.py  test_prop_manifest.py  test_prop_paths.py  test_prop_readiness.py  test_ratchet.py  test_ratchet_io.py  test_ratchet_schema.py  (+9 more)
tests/fixtures/: __init__.py  builders.py  builders_helpers.py  snapshots.py  stubs.py
tests/integration/: __init__.py  conftest.py
tests/perf/: __init__.py  test_benchmarks.py
tests/performance/: __init__.py  conftest.py
tests/property/: __init__.py  test_enums.py  test_manifest.py  test_paths.py  test_readiness.py  test_runtime_paths.py
tests/property_based/: __init__.py  conftest.py  test_enums.py  test_manifest.py  test_paths.py  test_readiness.py  test_runtime_paths.py
tests/scripts/: test_check_error_codes.py
tests/snapshots/: dashboard.html  dashboard.md
tests/unit/: __init__.py  conftest.py
typing_inspector/: __init__.py  manifest.py  types.py  utils.py
typings/hypothesis/: __init__.pyi
typings/tomli/: __init__.pyi
(+396 files in other folders)
