[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typewiz"
version = "0.1.0"
description = "Python typing diagnostics aggregator with pluggable runners"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "PantherianCodeX" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "pyright>=1.1.407,<2.0.0",
  "mypy>=1.18.2,<2.0.0",
  "pydantic>=2.12.4,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/PantherianCodeX/typewiz"
Documentation = "https://github.com/PantherianCodeX/typewiz"
"Issue Tracker" = "https://github.com/PantherianCodeX/typewiz/issues"

[project.scripts]
typewiz = "typewiz.cli:main"
typing-inspector = "typewiz.cli:main"

[project.optional-dependencies]
tests = [
  "pytest>=8.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["typewiz*"]

[tool.setuptools.package-data]
typewiz = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma conflicts with formatter - REQUIRED
    "ISC001",  # Implicit string concatenation conflicts with formatter - REQUIRED
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test files: Core exceptions widely recognized as best practice
# References:
# - Ruff docs: https://docs.astral.sh/ruff/configuration/
# - Stack Overflow: https://stackoverflow.com/questions/68428293/s101-use-of-assert-detected-for-python-tests
# - Ruff issue #14149: https://github.com/astral-sh/ruff/issues/14149
# - Ruff issue #16892: https://github.com/astral-sh/ruff/issues/16892 (SLF001 in tests)
"tests/**/*.py" = [
    "S101",      # assert statements are fundamental to pytest
    "SLF001",    # Testing internals requires private member access
    "PLC2701",   # Tests must import private modules to test them
    "PLR2004",   # Magic numbers are standard in test data/fixtures
    "D103",      # Test function docstrings add no value
    "D102",      # Test method docstrings add no value
    "INP001",    # Tests don't require __init__.py
]
# Conftest files: Import after code for fixture registration
"tests/**/conftest.py" = ["E402"]
# Integration/performance tests: Subprocess execution required
"tests/integration/**/*.py" = ["S603", "S607"]
"tests/performance/**/*.py" = ["S603", "S607"]
# Specific test file testing git operations
"tests/unit/misc/test_refactor_imports.py" = ["S404", "S603", "S607"]
# Scripts: Utility scripts have different standards
"scripts/**/*.py" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["typewiz"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true
docstring-code-format = true
docstring-code-line-length = 88


[tool.coverage.run]
source = ["src/typewiz"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
norecursedirs = [
    ".venv",
    ".hypothesis",
    "node_modules",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "*.egg-info",
]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
    "--benchmark-disable",
    "-n",
    "auto",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "unit: Unit tests",
    "smoke: Smoke tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.pylint.main]
py-version = "3.12"
recursive = true
init-hook = "import sys; from pathlib import Path; ROOT = Path.cwd(); sys.path[:0] = [str(ROOT / 'src')]"
ignore-patterns = [
    "^\\..*",
    "^__pycache__$",
    "\\.pyc$",
    ".*\\.egg-info$",
    "^build$",
    "^dist$",
    "^tests$",
    "test_.*\\.py$",
    ".*_test\\.py$",
]
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.docparams",
    "pylint.extensions.for_any_all",
    "pylint.extensions.set_membership",
    "pylint.extensions.code_style",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.typing",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.mccabe",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.consider_refactoring_into_while_condition",
]
enable = "all"

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "bad-indentation",
    "too-few-public-methods",
    "no-self-argument",
    "redefined-outer-name",
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
enable = [
    "use-symbolic-message-instead",
    "useless-suppression",
]

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
max-module-lines = 1000

[tool.pylint.design]
max-complexity = 10
max-args = 7
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
max-attributes = 8
min-public-methods = 0
max-public-methods = 20
max-bool-expr = 5

[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
inlinevar-naming-style = "any"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
variable-naming-style = "snake_case"
docstring-min-length = 10
no-docstring-rgx = "^_"
good-names = ["i", "j", "k", "ex", "db", "id", "pk", "_", "e"]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false

[tool.pylint.imports]
deprecated-modules = ["optparse", "tkinter.tix"]
allow-wildcard-with-all = false
analyse-fallback-blocks = true

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.logging]
logging-modules = ["logging"]
logging-format-style = "new"

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = ["sys.exit", "argparse.parse_error"]

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true

[tool.pylint.typecheck]
contextmanager-decorators = ["contextlib.contextmanager"]
generated-members = []
ignored-modules = []
ignored-classes = ["SQLObject", "optparse.Values", "thread._local", "_thread._local"]
mixin-class-rgx = ".*MixIn"

[tool.pylint.variables]
allowed-redefined-builtins = []
dummy-variables-rgx = "_.*|dummy.*"
ignored-argument-names = "_.*"
init-import = false

[tool.pylint.classes]
defining-attr-methods = ["__init__", "__new__", "setUp", "asyncSetUp", "__post_init__"]
exclude-protected = ["_asdict", "_fields", "_replace", "_source", "_make"]
valid-classmethod-first-arg = ["cls"]
valid-metaclass-classmethod-first-arg = ["mcs"]

[tool.pylint.string]
check-quote-consistency = true
check-str-concat-over-line-jumps = true

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "build",
    "dist",
]
targets = ["src"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/node_modules",
    "**/.venv",
    "**/build",
    "**/dist",
    "**/*.egg-info",
    "examples/**",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInvalidTypeVarUse = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportUnboundVariable = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCallResult = false
reportUnusedCoroutine = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportMissingSuperCall = false
reportUninitializedInstanceVariable = true
reportInvalidStringEscapeSequence = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownMemberType = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportCallInDefaultInitializer = true
reportUnnecessaryTypeIgnoreComment = true
reportImplicitOverride = true
reportTypeCommentUsage = "error"
reportUnreachable = "error"
reportDeprecated = "error"
reportArgumentType = true
reportGeneralTypeIssues = true
reportAssignmentType = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
enableTypeIgnoreComments = true

[[tool.pyright.executionEnvironments]]
root = "scripts"
extraPaths = ["src"]
reportPrivateUsage = false
reportImplicitOverride = false

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = [".", "src", "tests"]
reportPrivateUsage = false
reportTypedDictNotRequiredAccess = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnnecessaryTypeIgnoreComment = false
reportImplicitOverride = false
reportArgumentType = false
reportGeneralTypeIssues = false
reportAssignmentType = false
reportMissingImports = false

[[tool.pyright.executionEnvironments]]
root = "src"
